# PaddleOCRV4-TensorRT

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindTensorRT.cmake
include/: cmd_line_parser.h  det.h  engine.h  ocr.h  postprocess_op.h  preprocess_op.h  rec.h  utility.h
include/engine/: EngineBuildLoadNetwork.inl
include/interfaces/: IEngine.h
src/: det.cpp  engine.cpp  main.cpp  ocr.cpp  postprocess_op.cpp  preprocess_op.cpp  rec.cpp  utility.cpp
